# caad-sendai-engineer-internship-2024

./: .env.example  .gitignore  README.md  pyproject.toml
example/1-simple-LCEL/: main.py
example/10-answer/: main.py
example/10-answer/nodes/: base.py  data_scientist.py  final_answerer.py  working_directory_checker.py
example/10-answer/workflows/: workflow.py
example/2-chatbot/: main.py
example/3-vector-stores-and-retrievers/: import.md  main.py
example/4-generate-image/: main.py
example/5-summarize-web/: main.py
example/6-simple-LangGragh/: main.py
example/7-single-agent-LangGragh/: main.py
example/8-input-file-LangGragh/: main.py
example/8-input-file-LangGragh/nodes/: custom_tool_node.py
example/8-input-file-LangGragh/tools/: python_repl.py
example/8-input-file-LangGragh/workflows/: workflow.py
example/9-output-json-LangGragh/: constants.py  main.py
example/9-output-json-LangGragh/nodes/: data_scientist.py  final_answerer.py
example/9-output-json-LangGragh/tools/: python_repl.py
example/9-output-json-LangGragh/workflows/: workflow.py
src/: main.py
src/nodes/: base.py  data_scientist.py  final_answerer.py  team_supervisor.py  web_scraper.py  web_searcher.py  working_directory_checker.py
src/tools/: scrape_webpages.py
src/tools/python_container_repl/: Dockerfile  python_container_repl.py
src/tools/python_container_repl/setup/python_repl_setup/: __init__.py  setup.py
src/workflows/: super.py  web_research.py
